--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <titli>home | Nossa escola </titli>
+    <link rel="stylesheeet" href="style.css"
+    
+</head>
 
+
+
+<body>
+
+</body>
+
+</html>
